# data-engineering

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  config.py  dependencies_to_add.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: ingestion.mmd  overview.mmd  transforms.mmd
docs/file_docs/: bootstrap_historical.md  bronze_to_silver.md  cli_commands_bootstrap.md  cli_commands_run_layers.md  config_docs.md  consumer_docs.md  docker_run_commands.md  incremental_reading.md  porting_pandas_pyspark.md  producer_docs.md  run_pipeline_script.md  silver_to_gold.md  testing_bronze_to_silver.md
docs/session_tracking/: sessions_MvP_V1.md  sessions_MvP_V2.md  sessions_MvP_V3.MD
docs/visuals/: KRaft_kafka_visual.mmd  bootstrap_historical_visual.mmd  bronze_to_silver_visual.mmd  consumer_visual.mmd  silver_to_gold_script.mmd
ingestion/: consumer.py  producer.py
scripts/: bootstrap_historical.py  run_pipeline.py
tests/: eda_own_data.ipynb  test_transforms.py
transforms/: bronze_to_silver.py  silver_to_gold.py
